[package]
name = "hrr_corrnet"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
bio = "*"
ndarray = { version = "0.14.0", features = ["approx"] }
ndarray-stats = "0.4"
csv = "1.1"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
superslice = "*"
ordered-float = "2.0"
itertools = "*"
approx = "*"
chrono = "0.4"
flate2 = { version = "0.2", features = ["tokio"] }