[package]
name = "corrnet"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
bio = "*"
ndarray = { version = "0.15.4", features = ["approx", "rayon"] }
ndarray-stats = "0.5"
csv = "1.1"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
superslice = "*"
ordered-float = "2.0"
itertools = "*"
approx = "*"
flate2 = { version = "1.0.22" }
serde = "1"
serde_derive = "1"
num-traits = "*"
polars = {version = "0.17.0", features = ["ndarray", "decompress"]}
rayon = "1.5.1"

[dev-dependencies]
maplit = "1.0"
